--- a/pom.xml
+++ b/pom.xml
@@ -21,5 +21,12 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.apache.maven/maven-artifact -->
+<dependency>
+    <groupId>org.apache.maven</groupId>
+    <artifactId>maven-artifact</artifactId>
+    <version>3.9.6</version>
+</dependency>
+
   </dependencies>
 </project>
